[package]
name = "ye_olde_todos"
version = "1.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.53", features = ["derive"] }
ignore = "0.4.25"
owo-colors = "4.2.3"
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
terminal_size = "0.4.3"
